--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>emerald</title>
-        <link rel="stylesheet" href="/css/emerald.css">
+        <link rel="stylesheet" href="css/emerald.min.css">
     </head>
     <body>
         <h1>Lorem Ipsum</h1>
