--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
         <link rel="stylesheet" href="css/emerald.min.css">
     </head>
     <body>
-        <h1>Lorem Ipsum</h1>
-        <p class="text--primary"> This is the <kbd>text--primary</kbd> colour </p>
-        <p class="text--secondary"> This is the <kbd>text--secondary</kbd> colour </p>
-        <p class="text--heading"> This is the <kbd>text--heading</kbd> colour </p>
-        <p class="text--primary"> <a href="http://www.google.com" class="text--link">This is the <kbd>text--link</kbd> colour</a></p>
-        <p class="text--primary"> <a href="http://www.google.com" class="text--link--block">This is the <kbd>text--link--block</kbd> colour</a> </p>
-        <p class="text--ui"> This is the <kbd>text--ui</kbd> colour </p>
+        <div class="div-center">
+            <div class="background--primary">
+                <h1> This background is <kbd>background--primary</kbd></h1>
+                <p class="text--primary"> This is the <kbd>text--primary</kbd> colour </p>
+                <p class="text--secondary"> This is the <kbd>text--secondary</kbd> colour </p>
+                <p class="text--heading"> This is the <kbd>text--heading</kbd> colour </p>
+                <p class="text--primary"> <a href="http://www.google.com" class="text--link">This is the <kbd>text--link</kbd> colour</a></p>
+                <p class="text--primary"> <a href="http://www.google.com" class="text--link--block">This is the <kbd>text--link--block</kbd> colour</a> </p>
+                <p class="text--ui"> This is the <kbd>text--ui</kbd> colour </p>
+                <p class="text--success"> This is <kbd>text--success</kbd> text </p>
+                <p class="text--warning"> This is <kbd>text--warning</kbd> text </p>
+                <p class="text--error"> This is <kbd>text--error</kbd> text </p>
+            </div>
+            <div class="background--secondary">
+                <h1> This background is <kbd>background--secondary</kbd></h1>
+                <p class="text--ui"> This is the <kbd>text--ui</kbd> colour on a darker background</p>
+
+
+                <div class="background--success" style="display: inline-block; width: 150px; height: 40px; vertical-align: middle; margin-bottom: 10px;">
+                    <kbd>background--success</kbd>
+                </div>
+                <div class="background--warning" style="display: inline-block; width: 150px; height: 40px; vertical-align: middle; margin-bottom: 10px;">
+                    <kbd>background--warning</kbd>
+                </div>
+                <div class="background--error" style="display: inline-block; width: 150px; height: 40px; vertical-align: middle; margin-bottom: 10px;">
+                    <kbd>background--error</kbd>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
