--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
         <link rel="stylesheet" href="css/emerald.min.css">
     </head>
     <body>
-        <h1>Lorem Ipsum</h1>
-        <p class="text--primary"> This is the <kbd>text--primary</kbd> colour </p>
-        <p class="text--secondary"> This is the <kbd>text--secondary</kbd> colour </p>
-        <p class="text--heading"> This is the <kbd>text--heading</kbd> colour </p>
-        <p class="text--primary"> <a href="http://www.google.com" class="text--link">This is the <kbd>text--link</kbd> colour</a></p>
-        <p class="text--primary"> <a href="http://www.google.com" class="text--link--block">This is the <kbd>text--link--block</kbd> colour</a> </p>
-        <p class="text--ui"> This is the <kbd>text--ui</kbd> colour </p>
+        <div class="container">
+            <div class="column">
+                <div class="row">
+                    <h1>Lorem Ipsum</h1>
+                    <p>
+                        <small>These are all the avaliable type modifiers:</small>
+                        <span class="blockline text--primary"> This is the <kbd>text--primary</kbd> colour </span>
+                        <span class="blockline text--secondary"> This is the <kbd>text--secondary</kbd> colour </span>
+                        <span class="blockline text--heading"> This is the <kbd>text--heading</kbd> colour </span>
+                        <span class="blockline text--primary"> <a href="#" class="text--link">This is the <kbd>text--link</kbd> colour</a></span>
+                        <span class="blockline text--primary"> <a href="#" class="text--link--block">This is the <kbd>text--link--block</kbd> colour</a> </span>
+                        <span class="blockline text--ui"> This is the <kbd>text--ui</kbd> colour </span>
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
