Tidied up index

--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
         <div class="container">
             <div class="row">
                 <div class="column full-width background--primary">
-                    <h1>Lorem Ipsum</h1>
+                    <h1>This background is <code>background--primary</code></h1>
                     <p>
                         <small>These are all the avaliable type modifiers:</small>
-                        <span class="blockline text--primary"> This is the text--primary colour </span>
-                        <span class="blockline text--secondary"> This is the text--secondary colour </span>
-                        <span class="blockline text--heading"> This is the text--heading colour </span>
-                        <span class="blockline text--primary"> <a href="#" class="text--link">This is the text--link colour</a></span>
-                        <span class="blockline text--primary"> <a href="#" class="text--link--block">This is the text--link--block colour</a> </span>
-                        <span class="blockline text--ui"> This is the text--ui colour </span>
+                        <span class="blockline text--primary"> This is the <code>text--primary</code> colour </span>
+                        <span class="blockline text--secondary"> This is the <code>text--secondary</code> colour </span>
+                        <span class="blockline text--heading"> This is the <code>text--heading</code> colour </span>
+                        <span class="blockline text--primary"> <a href="#" class="text--link">This is the <code>text--link</code> colour</a></span>
+                        <span class="blockline text--primary"> <a href="#" class="text--link--block">This is the <code>text--link--block</code> colour</a> </span>
+                        <span class="blockline text--ui"> This is the <code>text--ui</code> colour </span>
                     </p>
                 </div>
                 <div class="column full-width background--secondary content--center">
-                    <h1 class="text--white"> This background is background--secondary</h1>
-                    <p class="text--ui"> This is the text--ui colour on a darker background</p>
-
+                    <h1 class="text--white"> This background is <code>background--secondary</code></h1>
+                    <p class="text--ui"> This is the <code>text--ui</code> colour on a darker background</p>
+                    <br>
                     <div class="content--center -flex row">
                         <div class="background--success column one-third">
-                            background--success
+                            <code>background--success</code>
                         </div>
                         <div class="background--warning column one-third">
-                            background--warning
+                            <code>background--warning</code>
                         </div>
                         <div class="background--error column one-third">
-                            background--error
+                            <code>background--error</code>
                         </div>
                     </div>
                 </div>
