--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <span class="blockline text--ui"> This is the <code>text--ui</code> colour </span>
                     </p>
                 </div>
-                <div class="column full-width background--secondary content--center">
+                <div class="column full-width background--secondary">
                     <h1 class="text--white"> This background is <code>background--secondary</code></h1>
                     <p class="text--ui"> This is the <code>text--ui</code> colour on a darker background</p>
                     <br>
