--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
                     <h1 class="text--white"> This background is <code>background--secondary</code></h1>
                     <p class="text--ui"> This is the <code>text--ui</code> colour on a darker background</p>
                     <br>
-                    <div class="content--center -flex row">
-                        <div class="background--success column one-third">
-                            <code>background--success</code>
-                        </div>
-                        <div class="background--warning column one-third">
-                            <code>background--warning</code>
-                        </div>
-                        <div class="background--error column one-third">
-                            <code>background--error</code>
+                    <div class="container">
+                        <div class="content--center -flex row">
+                            <div class="background--success column one-third">
+                                <code>background--success</code>
+                            </div>
+                            <div class="background--warning column one-third">
+                                <code>background--warning</code>
+                            </div>
+                            <div class="background--error column one-third">
+                                <code>background--error</code>
+                            </div>
                         </div>
                     </div>
                 </div>
