--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>emerald</title>
         <link rel="stylesheet" href="css/emerald.min.css">
     </head>
-    <body>
+    <!-- <body>
         <div class="container">
             <div class="row">
                 <div class="column full-width background--primary">
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="column one-half background--primary">
+                <div class="column one-half" style="background-color:red;">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
                 <div class="column one-half background--secondary text--white">
@@ -48,16 +48,40 @@
                 </div>
             </div>
             <div class="row">
-                <div class="column one-third background--primary">
+                <div class="column one-third" style="background-color:red;">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
                 <div class="column one-third background--secondary text--white">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
-                <div class="column one-third background--primary">
+                <div class="column one-third" style="background-color:red;">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
             </div>
         </div>
+    </body> -->
+
+
+
+    <body>
+        <div class="grid-container outline">
+        <div class="row">
+            <div class="col-1"><p>col-1</p></div>
+            <div class="col-1"><p>col-1</p></div>
+            <div class="col-1"><p>col-1</p></div>
+            <div class="col-1"><p>col-1</p></div>
+            <div class="col-1"><p>col-1</p></div>
+            <div class="col-1"><p>col-1</p></div>
+        </div>
+        <div class="row">
+            <div class="col-2"><p>col-2</p></div>
+            <div class="col-2"><p>col-2</p></div>
+            <div class="col-2"><p>col-2</p></div>
+        </div>
+        <div class="row">
+            <div class="col-3"><p>col-3</p></div>
+            <div class="col-3"><p>col-3</p></div>
+        </div>
+    </div>
     </body>
 </html>
