--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <title>emerald</title>
         <link rel="stylesheet" href="css/emerald.min.css">
     </head>
-    <!-- <body>
-        <div class="container">
+    <body>
+        <div class="grid-container content--center">
             <div class="row">
-                <div class="column full-width background--primary">
+                <div class="column-full-width background--primary">
                     <h1>This background is <code>background--primary</code></h1>
                     <p>
                         <small>These are all the avaliable type modifiers:</small>
@@ -20,19 +20,19 @@
                         <span class="blockline text--ui"> This is the <code>text--ui</code> colour </span>
                     </p>
                 </div>
-                <div class="column full-width background--secondary">
+                <div class="column-full-width background--secondary">
                     <h1 class="text--white"> This background is <code>background--secondary</code></h1>
                     <p class="text--ui"> This is the <code>text--ui</code> colour on a darker background</p>
                     <br>
-                    <div class="container">
+                    <div class="grid-container">
                         <div class="content--center -flex row">
-                            <div class="background--success column one-third">
+                            <div class="background--success column-one-third">
                                 <code>background--success</code>
                             </div>
-                            <div class="background--warning column one-third">
+                            <div class="background--warning column-one-third">
                                 <code>background--warning</code>
                             </div>
-                            <div class="background--error column one-third">
+                            <div class="background--error column-one-third">
                                 <code>background--error</code>
                             </div>
                         </div>
@@ -40,48 +40,24 @@
                 </div>
             </div>
             <div class="row">
-                <div class="column one-half" style="background-color:red;">
+                <div class="column-one-half" style="background--primary">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
-                <div class="column one-half background--secondary text--white">
+                <div class="column-one-half background--secondary text--white">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
             </div>
             <div class="row">
-                <div class="column one-third" style="background-color:red;">
+                <div class="column-one-third" style="background--primary">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
-                <div class="column one-third background--secondary text--white">
+                <div class="column-one-third background--secondary text--white">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
-                <div class="column one-third" style="background-color:red;">
+                <div class="column-one-third" style="background--primary">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
             </div>
         </div>
-    </body> -->
-
-
-
-    <body>
-        <div class="grid-container outline">
-        <div class="row">
-            <div class="col-1"><p>col-1</p></div>
-            <div class="col-1"><p>col-1</p></div>
-            <div class="col-1"><p>col-1</p></div>
-            <div class="col-1"><p>col-1</p></div>
-            <div class="col-1"><p>col-1</p></div>
-            <div class="col-1"><p>col-1</p></div>
-        </div>
-        <div class="row">
-            <div class="col-2"><p>col-2</p></div>
-            <div class="col-2"><p>col-2</p></div>
-            <div class="col-2"><p>col-2</p></div>
-        </div>
-        <div class="row">
-            <div class="col-3"><p>col-3</p></div>
-            <div class="col-3"><p>col-3</p></div>
-        </div>
-    </div>
     </body>
 </html>
