--- a/index.html
+++ b/index.html
@@ -58,6 +58,53 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
             </div>
+            <div class="row">
+                <div class="column-full-width">
+                    <h1>BUTTONS</h1>
+                    <h5>BORDERS</h5>
+                    <div class="button--pill button--border--secondarythick background--primary text--primary ">
+                        thick
+                    </div>
+                    <div class="button--pill button--border--secondarythin background--primary text--primary ">
+                        thin
+                    </div>
+                    <div class="button--pill background--secondary text--white ">
+                        hello
+                    </div>
+                </div>
+
+                <div class="column-full-width">
+                    <h5>CURVED</h5>
+                    <div class="button--leftcurve background--secondary text--white ">
+                        leftcurve
+                    </div>
+                    <div class="button--block background--secondary text--white ">
+                        block
+                    </div>
+                    <div class="button--block background--secondary text--white ">
+                        block
+                    </div>
+                    <div class="button--rightcurve background--secondary text--white ">
+                        rightcurve
+                    </div>
+                </div>
+
+                <div class="column-full-width">
+                    <h5>TOP + BOTTOM CURVED</h5>
+                    <div class="button--topcurve background--secondary text--white ">
+                        topcurve
+                    </div>
+                    <div class="button--topcurve background--secondary text--white ">
+                        topcurve
+                    </div>
+                    <div class="button--bottomcurve background--secondary text--white ">
+                        bottomcurve
+                    </div>
+                    <div class="button--bottomcurve background--secondary text--white ">
+                        bottomcurve
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
